src/objects/TIMBASURVEYS__SurveyResponse__c.object
<CustomObject>
    <fields>
        <fullName>TIMBASURVEYS__AnswerOption__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AnswerOption</label>
        <referenceTo>TIMBASURVEYS__AnswerOption__c</referenceTo>
        <relationshipLabel>SurveyResponses</relationshipLabel>
        <relationshipName>SurveyResponses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__BooleanResponse__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BooleanResponse</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__DateTimeResponse__c</fullName>
        <label>DateTimeResponse</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__NumberResponse__c</fullName>
        <label>NumberResponse</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__Recipient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recipient</label>
        <referenceTo>TIMBASURVEYS__Recipient__c</referenceTo>
        <relationshipLabel>SurveyResponses</relationshipLabel>
        <relationshipName>SurveyResponses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__ResponseType__c</fullName>
        <label>ResponseType</label>
        <picklist>
            <picklistValues>
                <fullName>DateTime</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>String</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boolean</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__StringResponse__c</fullName>
        <label>StringResponse</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__SurveyQuestion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SurveyQuestion</label>
        <referenceTo>TIMBASURVEYS__SurveyQuestion__c</referenceTo>
        <relationshipLabel>SurveyResponses</relationshipLabel>
        <relationshipName>SurveyResponses</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>SurveyResponse</label>
    <nameField>
        <label>SurveyResponse Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SurveyResponses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>